kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out ./kubernetes
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out ./kubernetes
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/django-task-1-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
          image: postgres:13
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - name: sql-command
              mountPath: /docker-entrypoint-initdb.d
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: sql-command
          configMap:
            name: initdb
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
status: {}
